# dnsbase

./: CHANGELOG.md  LICENSE  README.md  cabal.project  dnsbase.cabal  extensible.hs  simple.hs
.github/workflows/: haskell.yml
bench/: bench.hs
internal/Net/DNSBase/Decode/Internal/: Domain.hs  Message.hs  Option.hs  RData.hs  RSE.hs  State.hs
internal/Net/DNSBase/EDNS/Internal/: OptNum.hs  Option.hs
internal/Net/DNSBase/EDNS/Internal/Option/: Opaque.hs
internal/Net/DNSBase/Encode/Internal/: Metric.hs  State.hs
internal/Net/DNSBase/Internal/: Bytes.hs  Domain.hs  EDNS.hs  Error.hs  Flags.hs  Message.hs  NameComp.hs  Nat16.hs  Opcode.hs  Peer.hs  Present.hs  RCODE.hs  RData.hs  RR.hs  RRCLASS.hs  RRTYPE.hs  Salted.hs  SockIO.hs  Text.hs  Transport.hs  Util.hs
internal/Net/DNSBase/Internal/Domain/: Parse8.hs
internal/Net/DNSBase/RData/Internal/: XNAME.hs
internal/Net/DNSBase/Resolver/Internal/: Encoding.hs  Parser.hs  Types.hs
src/Data/: Salted.hs
src/Data/Salted/: Map.hs  Set.hs
src/Net/: DNSBase.hs
src/Net/DNSBase/: Bytes.hs  Domain.hs  EDNS.hs  Error.hs  Flags.hs  Lookup.hs  Message.hs  Nat16.hs  NonEmpty.hs  NsecTypes.hs  Opcode.hs  Present.hs  RCODE.hs  RData.hs  RR.hs  RRCLASS.hs  RRSet.hs  RRTYPE.hs  Resolver.hs  Salted.hs  Secalgs.hs  Text.hs
src/Net/DNSBase/Decode/: Domain.hs  Map.hs  State.hs
src/Net/DNSBase/EDNS/: OptNum.hs  Option.hs
src/Net/DNSBase/EDNS/Option/: ECS.hs  NSID.hs  Opaque.hs  Secalgs.hs
src/Net/DNSBase/Encode/: Metric.hs  State.hs
src/Net/DNSBase/RData/: A.hs  CAA.hs  CSYNC.hs  Dnssec.hs  NSEC.hs  Obsolete.hs  SOA.hs  SRV.hs  SVCB.hs  TLSA.hs  TXT.hs  WKS.hs  XNAME.hs
src/Net/DNSBase/RData/SVCB/: SPV.hs  SPVList.hs  SPVSet.hs  SVCParamKey.hs  SVCParamValue.hs
tests/: EncodePresentable.hs  EncodeWire.hs  LiteralsParser.hs  domain.hs  literals.hs  message.hs  test.hs
